--- a/freecodecamp-weather-app/package.json
+++ b/freecodecamp-weather-app/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.28.0",
+    "eslint-plugin-react": "^7.31.11",
     "tailwindcss": "^3.2.4"
   }
 }
